syntax = "proto3";
package comdex.asset.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/asset/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message ExtendedAsset {

    uint64 id                = 1;
    uint64 asset_id      = 2 [(gogoproto.moretags) = "yaml:\"asset_id\""];
    string collateral_weight = 3 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false,
      (gogoproto.moretags) = "yaml:\"collateral_weight\""
    ];
  
    string liquidation_threshold = 4 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false,
      (gogoproto.moretags) = "yaml:\"liquidation_threshold\""
    ];
    // The rate indicates the price of the asset in USD
    string rate = 5 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false,
      (gogoproto.moretags) = "yaml:\"rate\""
    ];
  
    bool is_bridged_asset = 6 [
      (gogoproto.customname) = "IsBridgedAsset",
      (gogoproto.moretags) = "yaml:\"is_bridged_asset\""
    ];
  
  }